exports[`test # ProductInTheCart 1`] = `
<div
  className="ProductInTheCart-container">
  <div
    className="ProductInTheCart-info-container">
    <div
      className="ProductInTheCart-img">
      <img
        alt=""
        src="/images/products/undefined" />
    </div>
    <div
      className="ProductInTheCart-info-holder">
      <div
        className="ProductInTheCart-div ProductInTheCart-info-name">
        <Link
          onlyActiveOnIndex={false}
          style={Object {}}
          to="/product/1">
          asd
        </Link>
      </div>
      <div
        className="ProductInTheCart-div ProductInTheCart-info-price">
        $
        123
      </div>
      <div
        className="ProductInTheCart-div ProductInTheCart-info-quantity-section">
        <div
          className="ProductInTheCart-info-quantity">
          <strong>
            Quantity:
          </strong>
           
          1
        </div>
        <div
          className="ProductInTheCart-info-quantity-change"
          id="ProductInTheCart-add"
          onClick={[Function]}>
          Add
        </div>
      </div>
      <div
        className="ProductInTheCart-info-seller text-flow">
        Sold by : 
        asdf
      </div>
    </div>
  </div>
  <div
    className="ProductInTheCart-right-session">
    <button
      className="waves-effect waves-light btn pink"
      id="ProductInTheCart-open-dialog"
      onClick={[Function]}>
      Remove
    </button>
  </div>
  <Dialog
    actions={
      Array [
        <FlatButton
          disabled={false}
          label="No"
          labelPosition="after"
          labelStyle={Object {}}
          onKeyboardFocus={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onTouchStart={[Function]}
          onTouchTap={[Function]}
          primary={true}
          secondary={false} />,
        <FlatButton
          disabled={false}
          id="ProductInTheCart-remove"
          keyboardFocused={true}
          label="Yes"
          labelPosition="after"
          labelStyle={Object {}}
          onKeyboardFocus={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onTouchStart={[Function]}
          onTouchTap={[Function]}
          primary={true}
          secondary={false} />,
      ]
    }
    autoDetectWindowHeight={true}
    autoScrollBodyContent={false}
    id="ProductInTheCart-Dialog"
    modal={false}
    onRequestClose={[Function]}
    open={false}
    repositionOnUpdate={true}
    title="Remove and Redirect Confirmation">
    <div>
      Are you want to remove the last item from the cart, and Redirect to the Shop Page
    </div>
  </Dialog>
</div>
`;

exports[`test # ProductInTheCart should render nested div 1`] = `
<div
  className="ProductInTheCart-container">
  <div
    className="ProductInTheCart-info-container">
    <div
      className="ProductInTheCart-img">
      <img
        alt=""
        src="/images/products/undefined" />
    </div>
    <div
      className="ProductInTheCart-info-holder">
      <div
        className="ProductInTheCart-div ProductInTheCart-info-name">
        <Link
          onlyActiveOnIndex={false}
          style={Object {}}
          to="/product/1">
          asd
        </Link>
      </div>
      <div
        className="ProductInTheCart-div ProductInTheCart-info-price">
        $
        123
      </div>
      <div
        className="ProductInTheCart-div ProductInTheCart-info-quantity-section">
        <div
          className="ProductInTheCart-info-quantity">
          <strong>
            Quantity:
          </strong>
           
          2
        </div>
        <div
          className="ProductInTheCart-info-quantity-change"
          id="ProductInTheCart-add"
          onClick={[Function]}>
          Add
        </div>
        <div
          className="ProductInTheCart-info-quantity-change"
          id="ProductInTheCart-substract"
          onClick={[Function]}>
          Substract
        </div>
      </div>
      <div
        className="ProductInTheCart-info-seller text-flow">
        Sold by : 
        asdf
      </div>
    </div>
  </div>
  <div
    className="ProductInTheCart-right-session">
    <button
      className="waves-effect waves-light btn pink"
      id="ProductInTheCart-open-dialog"
      onClick={[Function]}>
      Remove
    </button>
  </div>
  <Dialog
    actions={
      Array [
        <FlatButton
          disabled={false}
          label="No"
          labelPosition="after"
          labelStyle={Object {}}
          onKeyboardFocus={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onTouchStart={[Function]}
          onTouchTap={[Function]}
          primary={true}
          secondary={false} />,
        <FlatButton
          disabled={false}
          id="ProductInTheCart-remove"
          keyboardFocused={true}
          label="Yes"
          labelPosition="after"
          labelStyle={Object {}}
          onKeyboardFocus={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onTouchStart={[Function]}
          onTouchTap={[Function]}
          primary={true}
          secondary={false} />,
      ]
    }
    autoDetectWindowHeight={true}
    autoScrollBodyContent={false}
    id="ProductInTheCart-Dialog"
    modal={false}
    onRequestClose={[Function]}
    open={false}
    repositionOnUpdate={true}
    title="Remove and Redirect Confirmation">
    <div>
      Are you want to remove the last item from the cart, and Redirect to the Shop Page
    </div>
  </Dialog>
</div>
`;

exports[`test # ProductInTheCartWrapper 1`] = `
<ProductInTheCart
  increaseQuantityOfProductInTheCart={[Function]}
  removeProductFromCart={[Function]}
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
  subtractQuantityOfProductIntheCart={[Function]} />
`;
